# sber_test_task

./: .dockerignore  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  Task.md  alembic.ini  docker-compose.yml  main.py  openapi.yaml  pyproject.toml
app/: application.py  config.py  exception_handlers.py  session_manager.py
app/api/models/: healthcheck.py  system_items.py
app/api/routers/: healthcheck.py  system_items.py  utils.py
app/database/: __init__.py
app/database/models/: system_items.py
config/: settings.yml
db/alembic/: env.py
db/alembic/versions/: 0001_init_table_system_items.py
