[tool.poetry]
name = "sber-test-task"
version = "0.0.1"
description = "Сервис облачного хранения файлов"
authors = ["Nickolay Evsin <nickolay.evsin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
dynaconf = "^3.2.4"
alembic = "^1.13.1"
uvicorn = "^0.28.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"
sqlalchemy-utils = "^0.41.1"
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
flake8 = "^7.0.0"

[tool.black]
line-length = 120
extend-exclude = "db"

[tool.isort]
profile = "black"
skip = [".venv", "venv", "alembic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
